--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -16,7 +16,7 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/fl_2"
+        android:id="@+id/container_2"
         android:layout_width="395dp"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
