--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bookDetailsLayout"
@@ -9,9 +10,9 @@
 
     <ImageView
         android:id="@+id/bookCover"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        android:layout_marginTop="125dp"
         android:contentDescription="@string/image_of_book_cover"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.520"
@@ -64,4 +65,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bookCover" />
 
-</TextView>
+</androidx.constraintlayout.widget.ConstraintLayout>
