--- a/app/src/main/res/layout-land/fragment_book_details.xml
+++ b/app/src/main/res/layout-land/fragment_book_details.xml
@@ -64,4 +64,18 @@
         app:layout_constraintEnd_toStartOf="@+id/bookPageLength"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bookAuthor" />
+
+
+    <Button
+        android:id="@+id/playBtn"
+        android:layout_width="70dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="30dp"
+        android:text="@string/play"
+        app:layout_constraintEnd_toStartOf="@+id/bookCover"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
